--- a/REUSE.toml
+++ b/REUSE.toml
@@ -17,28 +17,37 @@ SPDX-License-Identifier = "CC0-1.0"
 path = [
   "cmd/bmctl/boot.go",
   "cmd/bmctl/main.go",
+  "cmd/bmctl/main_test.go",
   "cmd/bmctl/version.go",
   "cmd/bmctl/version_test.go",
   "go.mod",
   "go.sum",
   "pkg/bmc/bmc.go",
   "pkg/bmc/client.go",
+  "pkg/bmc/client_test.go",
   "pkg/bmc/http.go",
   "pkg/bmc/http_test.go",
+  "pkg/cli/cli.go",
   "pkg/cli/errors.go",
   "pkg/cli/errors_test.go",
   "pkg/cli/execute.go",
   "pkg/cli/execute_test.go",
+  "pkg/cli/flags.go",
+  "pkg/cli/flags_test.go",
   "pkg/cli/signals.go",
   "pkg/cli/signals_test.go",
   "pkg/logging/context.go",
   "pkg/logging/context_test.go",
   "pkg/logging/logger.go",
+  "pkg/logging/logging.go",
   "pkg/ssh/proxy.go",
+  "pkg/ssh/proxy_test.go",
+  "pkg/ssh/ssh.go",
   "pkg/testing/capture.go",
   "pkg/testing/capture_test.go",
   "pkg/testing/fork.go",
   "pkg/testing/fork_test.go",
+  "pkg/testing/testing.go",
 ]
 SPDX-FileCopyrightText = "2025 GSI Helmholtzzentrum für Schwerionenforschung GmbH <https://www.gsi.de/en/>"
 SPDX-License-Identifier = "LGPL-3.0-or-later"
